# maelstrom

./: .README.md.swp  .demo.rb.swp  .gitignore  CHANGELOG.md  Dockerfile  README.md  demo.rb  maelstrom  operations.json  package.sh  project.clj  raft.py  run-maelstrom
demo/: python.py  raft.py  raft.rb
demo/c++/: Makefile  README.md  echo.cpp  maelstrom.cpp  maelstrom.h
demo/clojure/: echo.clj  flake_ids.clj  gcounter.clj  gossip.clj  gset.clj  kafka.clj  multi_key_txn.clj  node.clj  txn.clj  txn_rw_register_hat.clj  txn_rw_register_no_isolation.clj
demo/echo/: echo-smol.rb  echo.rb
demo/go/: README.md  go.mod  go.sum  kv.go  kv_test.go  node.go  node_test.go  rpc_error.go  rpc_error_test.go
demo/java/: README.md  broadcast  build  g-counter  g-set  pom.xml  server  txn-list-append
demo/js/: crdt_gset.js  crdt_pn_counter.js  echo.js  echo_minimal.js  gossip.js  multi_key_txn.js  node.js  single_key_txn.js
demo/python/: README.md  broadcast.py  echo-with-handlers.py  echo-with-receive.py  echo.py  lock-single-server.py  lock-wrong-impl.py  maelstrom.py  node.py  raft.py
demo/ruby/: broadcast.rb  crdt.rb  datomic_list_append.rb  echo.rb  echo_full.rb  errors.rb  g_set.rb  lin_kv_proxy.rb  node.rb  pn_counter.rb  promise.rb  raft.rb
demo/rust/: Cargo.toml  README.md
demo/zig/: README.md  (+1 more)
doc/: 01-bootstrapping.md  01-getting-ready.md  02-key-value.md  03-leader-election.md  04-replication.md  05-committing.md  intro.md  protocol.md  results.md  services.md  workloads.md
pkg/: maelstrom
resources/: errors.edn  protocol-intro.md  workloads-intro.md
(+161 files in other folders)
